# webctl

./: .gitignore  Cargo.toml  README.md
crates/webctl-app/: Cargo.toml
crates/webctl-app/src/: cli.rs  execute.rs  extract.rs  main.rs  shell.rs
crates/webctl-app/src/commands/: emit.rs  install.rs  lint.rs  mod.rs  recon.rs
crates/webctl-app/src/ui/: progress.rs  prompt.rs
crates/webctl-classifier/: Cargo.toml
crates/webctl-classifier/src/: ax_stub.rs  bucket.rs  classify.rs  features.rs  http_infer.rs  lib.rs
crates/webctl-emit-cli/: Cargo.toml
crates/webctl-emit-cli/src/: help.rs  just_bash.rs  lib.rs  manifest.rs  shim.rs  template.rs
crates/webctl-install/: Cargo.toml
crates/webctl-install/src/: fetch.rs  install.rs  lib.rs  registry.rs  resolve.rs  shim.rs
crates/webctl-ir/: Cargo.toml
crates/webctl-ir/src/: ax.rs  descriptor.rs  extractor.rs  http.rs  lib.rs  lint.rs  meta.rs  paths.rs  registry.rs
crates/webctl-probe/: Cargo.toml
crates/webctl-probe/src/: agent_browser.rs  auto_extract.rs  auto_recon.rs  capture.rs  har.rs  lib.rs  overlay.rs  paths.rs
docs/: shaping-extractors.md
examples/: README.md  news-ycombinator-com.webctl.json  www-sunat-gob-pe.webctl.json
fixtures/sunat/: ax-final.txt  ax-pre.txt  capture.har  meta.json
tests/: emit_cli_help.rs  install_local_ir.rs  recon_sunat.rs
