[package]
name = "webctl"
edition.workspace = true
version.workspace = true

[[bin]]
name = "webctl"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
indicatif.workspace = true
miette.workspace = true
owo-colors.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
camino.workspace = true
url.workspace = true
webctl-classifier = { path = "../webctl-classifier" }
webctl-emit-cli = { path = "../webctl-emit-cli" }
webctl-install = { path = "../webctl-install" }
webctl-ir = { path = "../webctl-ir" }
webctl-probe = { path = "../webctl-probe" }
