[package]
name = "webctl-classifier"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true
webctl-ir = { path = "../webctl-ir" }
webctl-probe = { path = "../webctl-probe" }
