[package]
name = "webctl-emit-cli"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
serde.workspace = true
serde_json.workspace = true
owo-colors.workspace = true
webctl-ir = { path = "../webctl-ir" }

[dev-dependencies]
tempfile.workspace = true
