[package]
name = "webctl-install"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
webctl-emit-cli = { path = "../webctl-emit-cli" }
webctl-ir = { path = "../webctl-ir" }
