[package]
name = "webctl-probe"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
regex.workspace = true
url.workspace = true
webctl-ir = { path = "../webctl-ir" }
